--- a/app.json
+++ b/app.json
@@ -1,5 +1,7 @@
 {
   "pages":[
+    "pages/home/home",
+    "pages/mine/mine",
     "pages/index/index",
     "pages/logs/logs"
   ],
@@ -8,6 +10,23 @@
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "Weixin",
     "navigationBarTextStyle":"black"
+  },
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/home/home",
+        "text": "首页",
+        "iconPath": "icon/_home.png",
+        "selectedIconPath": "icon/home.png"
+      },
+      {
+        "pagePath": "pages/mine/mine",
+        "text": "我的最爱",
+        "iconPath": "icon/_favorite.png",
+        "selectedIconPath": "icon/favorite.png"
+      }
+    ],
+    "selectedColor": "#DC143C"
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
