--- a/project.config.json
+++ b/project.config.json
@@ -41,7 +41,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.16.0",
-  "appid": "wxc5d7b9170edcd0c5",
+  "appid": "wx14139f2695de6dec",
   "projectname": "WXapps",
   "debugOptions": {
     "hidedInDevtools": []
