--- a/app.json
+++ b/app.json
@@ -5,12 +5,17 @@
     "pages/logs/logs"
   ],
   "window":{
-    "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "Weixin",
-    "navigationBarTextStyle":"black"
+    "backgroundTextStyle": "dark",
+    "navigationBarBackgroundColor": "#55ddFF",
+    "navigationBarTitleText": "解忧小铺",
+    "navigationBarTextStyle": "black",
+    "enablePullDownRefresh": true
   },
+
   "tabBar": {
+    "color": "black",
+    "selectedColor": "#a9b7b7",
+    "backgroundColor": "#EEEEEE",
     "list": [
       {
         "pagePath": "pages/home/home",
@@ -20,12 +25,11 @@
       },
       {
         "pagePath": "pages/mine/mine",
-        "text": "我的最爱",
+        "text": "我的收藏",
         "iconPath": "icon/_favorite.png",
         "selectedIconPath": "icon/favorite.png"
       }
-    ],
-    "selectedColor": "#DC143C"
+    ]
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
